INC-1165 Case Note by type performance improvements