@@ -47,11 +47,13 @@ import jakarta.validation.constraints.NotNull;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static java.lang.String.format;
+import static java.util.stream.Collectors.groupingBy;
 
 @Service
 @Validated
@@ -236,12 +238,39 @@ public class CaseNoteService {
         return caseNoteRepository.getCaseNoteUsageByBookingId(type, subType, bookingIds, deriveDates.getFromDateToUse(), deriveDates.getToDateToUse());
     }
 
-    public List<CaseNoteUsageByBookingId> getCaseNoteUsageByBookingIdTypeAndDate(@NotEmpty final List<String> types, @NotNull final List<BookingFromDatePair> bookingReviewDatePairs) {
-        return bookingReviewDatePairs.stream()
-            .map(b -> caseNoteRepository.getCaseNoteUsageByBookingIdAndFromDate(types, b.getBookingId(), b.getFromDate()))
-            .flatMap(List::stream)
-            .collect(Collectors.toList());
+    public List<CaseNoteUsageByBookingId> getCaseNoteUsageByBookingIdTypeAndDate(@NotEmpty final List<String> types, @NotEmpty final List<BookingFromDatePair> bookingReviewDatePairs) {
+        final var bookingDateMap = bookingReviewDatePairs.stream().collect(Collectors.toMap(BookingFromDatePair::getBookingId, BookingFromDatePair::getFromDate));
+
+        final var allCaseNotesOfType = offenderCaseNoteRepository.findByOffenderBooking_BookingIdInAndTypeInAndOccurrenceDateTimeGreaterThanEqual(
+            bookingDateMap.keySet().stream().toList(),
+            types,
+            bookingDateMap.values().stream().min(LocalDateTime::compareTo).orElseThrow()
+        );
+
+        return allCaseNotesOfType.stream()
+            .filter(b -> !bookingDateMap.get(b.getOffenderBooking().getBookingId()).isAfter(b.getOccurrenceDateTime()))
+            .collect(groupingBy(cn -> new CaseNoteTypesAndSubTypes(cn.getOffenderBooking().getBookingId(), cn.getType().getCode(), cn.getSubType().getCode())))
+            .entrySet().stream()
+            .map(summary ->
+            {
+                final var key = summary.getKey();
+                final var value = summary.getValue();
+                return new CaseNoteUsageByBookingId(
+                    key.bookingId,
+                    key.type,
+                    key.subType,
+                    value.size(),
+                    value.stream().max(Comparator.comparing(OffenderCaseNote::getOccurrenceDateTime)).orElseThrow().getOccurrenceDateTime()
+                );
+            })
+            .sorted(Comparator
+                .comparing(CaseNoteUsageByBookingId::getBookingId)
+                .thenComparing(CaseNoteUsageByBookingId::getCaseNoteType)
+                .thenComparing(CaseNoteUsageByBookingId::getCaseNoteSubType))
+            .toList();
     }
+
+    private static record CaseNoteTypesAndSubTypes(Long bookingId, String type, String subType) {};
 
     public List<CaseNoteStaffUsage> getCaseNoteStaffUsage(final String type, final String subType, @NotEmpty final List<Integer> staffIds, final LocalDate fromDate, final LocalDate toDate, final int numMonths) {
         final var deriveDates = new DeriveDates(fromDate, toDate, numMonths);
